# polars

./: search-index.js
.github/: release-drafter-cli.yml  release-drafter.yml
.github/workflows/: cli-build-test.yml  cli-release.yml  create-js-release.yaml  js-build-test.yaml  labeler.yaml  release-drafter.yml  test-js.yaml
nodejs-polars/: Cargo.toml  jest.config.ts  package.json  tsconfig.browser.json  tsconfig.build.json  webpack.config.js
nodejs-polars/__tests__/: cfg.test.ts  dataframe.test.ts  expr.test.ts  groupby.test.ts  lazyframe.test.ts  series.test.ts
nodejs-polars/browser/: Cargo.toml  package-lock.json  package.json  test.js  webpack.config.js
nodejs-polars/browser/js/: index.js
nodejs-polars/browser/src/: conversion.rs  datatypes.rs  error.rs  lib.rs  prelude.rs  series.rs
nodejs-polars/browser/src/conversion/: from.rs  mod.rs  prelude.rs  wrap.rs
nodejs-polars/examples/browser/: index.html  serve.js
nodejs-polars/polars/: cfg.ts  dataframe.ts  datatypes.ts  functions.ts  groupby.ts  index.ts  io.ts  native-polars.js  series.ts  utils.ts
nodejs-polars/polars/internals/: construction.ts  polars_internal.ts
nodejs-polars/polars/lazy/: dataframe.ts  expr.ts  functions.ts  groupby.ts  index.ts  lazy_functions.ts  whenthen.ts
nodejs-polars/polars/lazy/expr/: datetime.ts  index.ts  list.ts  string.ts
nodejs-polars/polars/series/: datetime.ts  list.ts  series.ts  string.ts
nodejs-polars/src/: conversion.rs  dataframe.rs  lib.rs  list_construction.rs  series.rs
nodejs-polars/src/conversion/: into.rs  wrap.rs
nodejs-polars/src/dataframe/: io.rs
nodejs-polars/src/lazy/: dataframe.rs  dsl.rs
polars/: Cargo.toml  Makefile  all.html  index.html
polars-cli/: Cargo.toml
polars-cli/src/: main.rs
polars/chunked_array/: struct.ChunkedArray.html
polars/datatypes/: enum.AnyValue.html  enum.ArrowDataType.html  enum.DataType.html  struct.CategoricalChunked.html  struct.Int64Type.html  struct.Logical.html  struct.UInt64Type.html  trait.InitHashMaps.html  trait.NumericNative.html  trait.StaticallyMatchesPolarsType.html
polars/error/: enum.ArrowError.html  enum.PolarsError.html
polars/frame/: struct.DataFrame.html
polars/polars-core/: Cargo.toml
polars/polars-io/: Cargo.toml
polars/prelude/: enum.AnyValue.html  enum.ArrowDataType.html  enum.DataType.html  enum.Expr.html  enum.FunctionExpr.html  enum.PolarsError.html  enum.TakeIdx.html  index.html  sidebar-items.js  struct.CategoricalChunked.html  struct.ChunkedArray.html  struct.CsvReader.html  struct.CsvWriter.html  struct.DataFrame.html  struct.GroupsIdx.html  struct.Int64Type.html  struct.LazyCsvReader.html  struct.Logical.html  struct.NoNull.html  struct.RollingOptions.html  struct.Schema.html  struct.Series.html  struct.SpecialEq.html  struct.StrptimeOptions.html  struct.StructArray.html  struct.UInt64Type.html  trait.ArrowGetItem.html  trait.FromData.html  trait.FxHash.html  trait.IndexOfSchema.html  trait.InitHashMaps.html  trait.IntoVec.html  trait.IsFloat.html  trait.LazyFileListReader.html  trait.ListBuilderTrait.html  trait.Literal.html  trait.NumericNative.html  trait.Range.html  trait.SerReader.html  trait.SerWriter.html  (+5 more)
polars/series/: struct.Series.html
polars_arrow/: index.html
polars_arrow/array/: trait.ArrowGetItem.html
polars_arrow/data_types/: trait.IsFloat.html
polars_arrow/error/: enum.ArrowError.html
polars_arrow/is_valid/: trait.ArrowArray.html
polars_arrow/trusted_len/: trait.TrustedLen.html
polars_arrow/utils/: struct.TrustMyLength.html  trait.FromTrustedLenIterator.html
polars_core/: all.html  index.html
polars_core/chunked_array/: struct.ChunkedArray.html  struct.Settings.html
polars_core/datatypes/: enum.AnyValue.html  enum.ArrowDataType.html  enum.DataType.html  struct.CategoricalChunked.html  struct.Logical.html  trait.NumericNative.html  trait.StaticallyMatchesPolarsType.html  type.BinaryChunked.html  type.BooleanChunked.html  type.DecimalChunked.html  type.Float32Chunked.html  type.Float64Chunked.html  type.Int16Chunked.html  type.Int32Chunked.html  type.Int64Chunked.html  type.Int8Chunked.html  type.ListChunked.html  type.ObjectChunked.html  type.UInt16Chunked.html  type.UInt32Chunked.html  type.UInt64Chunked.html  type.UInt8Chunked.html  type.Utf8Chunked.html
polars_core/error/: enum.ArrowError.html  enum.PolarsError.html
polars_core/frame/: struct.DataFrame.html
polars_core/hashing/: fn._hash_binary_array.html  index.html  sidebar-items.js  trait.FxHash.html  trait.VecHash.html
polars_core/prelude/: enum.PolarsError.html  struct.Arc.html  struct.CategoricalChunked.html  trait.ArrowGetItem.html  trait.IsFloat.html  trait.ValueSize.html
polars_core/series/: struct.Series.html
polars_core/utils/: struct.NoNull.html  trait.FromTrustedLenIterator.html
polars_io/: all.html  index.html  trait.ArrowReader.html  trait.SerReader.html  trait.SerWriter.html
polars_io/csv/: index.html  (+2 more)
polars_lazy/: index.html
polars_ops/: index.html
polars_sql/: index.html
polars_time/: index.html
polars_utils/: index.html
(+6082 files in other folders)
