[package]
name = "nodejs-polars"
version = "0.3.1"
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
exclude = ["libpolars.node"]
homepage = "https://github.com/pola-rs/polars"
license = "MIT"
repository = "https://github.com/pola-rs/polars"

[lib]
crate-type = ["cdylib"]
name = "nodejs_polars"

[dependencies]
ahash = "0.7"
dirs = "4.0"
napi-derive = "1"
polars-core = { path = "../polars/polars-core", default-features = false }
serde_json = { version = "1" }
thiserror = "1.0.20"

[dependencies.napi]
features = [
  "serde-json",
  "napi6",
]
version = "1"

[build-dependencies]
napi-build = "1"

[dependencies.polars]
features = [
  "abs",
  "arange", # "true_div",
  "concat_str",
  "csv-file",
  "cum_agg",
  "dataframe_arithmetic",
  "diagonal_concat",
  "diff",
  "dot_diagram",
  "dot_product",
  "dtype-full",
  "extract_jsonpath",
  "horizontal_concat",
  "interpolate",
  "is_first",
  "is_in",
  "json",
  "lazy_regex",
  "lazy",
  "list",
  "mode",
  "moment",
  "object",
  "parquet",
  "performant",
  "pretty_fmt",
  "private",
  "random",
  "rank",
  "reinterpret", # "decompress-fast",
  "repeat_by",
  "rolling_window",
  "round_series",
  "row_hash",
  "rows",
  "serde", # "asof_join",  # "cross_join",
  "simd",
  "string_encoding",
  "parquet",
  "ipc",
  "strings",
  "temporal",
  "zip_with",
]
path = "../polars"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace]
